--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,4 +27,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        python crm1_v14_registration_login/manage.py test
