--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,6 +25,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
+    - name: Run Django-based tests
       run: |
         python crm1_v14_registration_login/manage.py test
+    - name: Run Django server
+      run: |
+        python crm1_v14_registration_login/manage.py server
