--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,4 +30,4 @@ jobs:
         python crm1_v14_registration_login/manage.py test
     - name: Run Django server
       run: |
-        python crm1_v14_registration_login/manage.py server
+        python crm1_v14_registration_login/manage.py runserver
