--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build: #first job - testing
 
     runs-on: ubuntu-latest
     strategy:
@@ -28,4 +28,23 @@ jobs:
     - name: Run Django-based tests
       run: |
         python crm1_v14_registration_login/manage.py test
+  
+  
+  deploy: #second job - deploy
+    name: Deploy to Heroku
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: build
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps: 
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: bui-projekt #Must be unique in Heroku
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+      - name: Deployed successfully
+        run: |
+          echo Deployed!!
    
