--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,7 +30,7 @@ jobs:
         python crm1_v14_registration_login/manage.py test
   
   
-  security:
+  security: #second job - snyk scanning
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -48,7 +48,7 @@ jobs:
   
   
   
-  deploy: #second job - deploy
+  deploy: #third job - deploy
     name: Deploy to Heroku
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
