--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,6 +28,9 @@ jobs:
     - name: Run Django-based tests
       run: |
         python crm1_v14_registration_login/manage.py test
+    - name: Export ENV Var
+      run: |
+        export CODACY_PROJECT_TOKEN=${{secrets.CODACY_PROJECT_TOKEN}}
   
   
   security: #second job - snyk scanning
