--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,11 +28,10 @@ jobs:
     - name: Run Django-based tests
       run: |
         python crm1_v14_registration_login/manage.py test crm1_v14_registration_login/tests/
-    - name: Export ENV Var
+  
+    - name: Export ENV Var & Upload to Codacy
       run: |
         export CODACY_PROJECT_TOKEN=${{secrets.CODACY_PROJECT_TOKEN}}
-    - name: Upload to Codacy
-      run: |
         /bin/bash crm1_v14_registration_login/codacy.sh
   
   
