--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,7 +50,7 @@ jobs:
     name: Deploy to Heroku
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, security]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps: 
