--- a/crm1_v14_registration_login/crm1/.env
+++ b/crm1_v14_registration_login/crm1/.env
@@ -1,6 +1,5 @@
-SECRET_KEY = 'cz=&%f*9(d*zo$_55p=(p)(eki#p$pb^0159-)8k^6$9c3l&_b'
-
-SOCIAL_AUTH_FACEBOOK_KEY = '1300632967039690' 
-SOCIAL_AUTH_FACEBOOK_SECRET = '2bea3ca503be3cbd9fc1fcc3fabbdeb5'  
-SOCIAL_AUTH_GITHUB_KEY = '4495600e9de66b807165'
-SOCIAL_AUTH_GITHUB_SECRET = '33bf55570586d52f626eccd0d0a1691e41b6c63f'
+SECRET_KEY=cz=&%f*9(d*zo$_55p=(p)(eki#p$pb^0159-)8k^6$9c3l&_b
+SOCIAL_AUTH_FACEBOOK_KEY=1300632967039690 
+SOCIAL_AUTH_FACEBOOK_SECRET=2bea3ca503be3cbd9fc1fcc3fabbdeb5  
+SOCIAL_AUTH_GITHUB_KEY=4495600e9de66b807165
+SOCIAL_AUTH_GITHUB_SECRET=33bf55570586d52f626eccd0d0a1691e41b6c63f
